# tensor

./: .README.md.swp  .clang-format  .clang-tidy  .cmake-format.yaml  .cproject  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vcpkg.json
.claude/agents/: adr-writer.md  completeness-auditor.md  discovery-agent.md  doc-orchestrator.md  paper-reviewer.md
.claude/rules/: dialogue-style.md  documentation.md  version-control.md
.github/workflows/: ci.yml  cibuildwheel.yml  deploy-book.yml  lyx-export-ci.yml  notebook-ci.yml  python-wheel-smoke.yml
Tensor/: Tensor.sln
Tensor/Tensor/: ConcreteTensor.h  ConcreteTensor_detail.h  FunctionElement.h  FunctionTensor.h  FunctionTensor_detail.h  Functiontensor_detail.h  ReferenceTensor.h  ReferenceTensor_detail.h  Source.cpp  Tensor.cpp  Tensor.h  Tensor.vcxproj  Tensor.vcxproj.filters  TensorUtil.cpp  TensorUtil.h  TensorUtil_detail.h  Tensor_detail.h  Tensor_operators.h  _Tensor.h  _Tensor_detail.h  detail_tensor.h  tensor.h  tensorUtil.h  tensorUtil_detail.h  tensor_detail.h  tensor_operators.h  test_main.cpp  util.h
Tensor/samples/: ComvolveWithTensor.cpp  Marquardt.cpp
archive/: README.md
archive/eclipse-cdt/: .project
assets/: hero.txt
bench/: CMakeLists.txt  bench.cpp
bench/mlsys_paper/: .gitignore  README.md  bench_mlsys_paper_case_study.py
bench/mlsys_paper/backends/: __init__.py  einops_baseline.py  haliax_baseline.py  tensor_eigen.py  tensor_reference.py  tensor_webgpu.py
bench/mlsys_paper/datasets/: loader.py
bench/mlsys_paper/results/: README.md
bench/mlsys_paper/static_catch_suite/: README.md  T0_minimum_working_example.cpp
bench/mlsys_paper/static_catch_suite/T1_transposed_contraction/: einops.py  einops_translation.py  einx_translation.py  haliax_translation.py  penzai_translation.py  reference.json  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T1b_contract_axis_mismatch/: einops_translation.py  einx_translation.py  haliax_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T2_silent_broadcast/: einops_translation.py  einx_translation.py  haliax_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T2b_size1_dim_swap/: einops_translation.py  einx_translation.py  haliax_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T3_reduction_wrong_axis/: einops_translation.py  einx_translation.py  haliax_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T3b_argmax_wrong_axis/: einops_translation.py  einx_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T4_layout_swap/: einops_translation.py  einx_translation.py  haliax_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T4b_token_batch_swap/: einops_translation.py  einx_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T5_stack_vs_concat/: einops_translation.py  einx_translation.py  haliax_translation.py  penzai_translation.py  tensor_static.cpp  torch_translation.py
bench/mlsys_paper/static_catch_suite/T5b_repeat_vs_tile/: einops_translation.py  einx_translation.py  haliax_translation.py  tensor_static.cpp  torch_translation.py
binder/: environment.yml  postBuild
book/: _config.yml  _toc.yml  architecture.md  intro.md  pdf-cover.tex  references.bib  roadmap.md  stage.sh
cli/: README.md
docs/: AI_INSTRUCTIONS.md  INDEX.md  STRATEGY.md  WORKFLOW.md
docs/api-contract/: README.md  cpp-kernel-backend-port-surface.md  cpp-tensor-autograd-surface.md  cpp-tensor-core-surface.md  cpp-tensor-namespace-summary.md  cpp-tensor-tex-surface.md  python-public-surface.md
docs/arc42/: README.md
docs/design-guide/: README.md  ai-augmented-pr.md  architectural-discipline.md  code-tours.md  cpp-style-guide.md  cross-reference-discipline.md  glossary-maintenance.md  python-binding-style.md  python-notebook-authoring.md  release-ceremony.md  version-control.md
docs/detailed-design/: README.md  kernel-backend-port.md  python-sdk-binding-surface.md  tensor-autograd.md  (+5 more)
lyx-export/: LYX_PLUGIN.md  README.md  example.cpp.expected  example.lyx  install_lyx_converter.sh  lyx_to_tex.py  tensor-math.module
paper/: .gitignore  Makefile  README.md  neurips-workshop-2026.tex  refs.bib
python/: CMakeLists.txt
python/extras/tensor-named-axis-eigen/: pyproject.toml
python/extras/tensor-named-axis-webgpu/: pyproject.toml
python/notebooks/: 00_python-sdk-tour.ipynb  01_python-autograd.ipynb  02_python-tex.ipynb  03_multifocal-tensors.ipynb  04_python-bundle-adjustment-perspective.ipynb  05_swappable-backends.ipynb
python/src/: _tensor_native.cpp
python/tensor/: __init__.py
python/tests/: test_arithmetic.py  test_autograd.py  test_autograd_extensions.py  test_contract_numpy.py  test_set_backend.py  test_smoke.py  test_tex.py
tests/: CMakeLists.txt  test_autograd.cpp  test_autograd_activations.cpp  test_autograd_broadcast.cpp  test_autograd_div.cpp  test_autograd_dot.cpp  test_autograd_reduce.cpp  test_autograd_trig_sqrt.cpp  test_autograd_zero_grad_sgd.cpp  test_axis_shape.cpp  test_broadcast.cpp  test_contract.cpp  test_dynamic_tensor.cpp  test_eigen_backend.cpp  test_format.cpp  test_function_reference_tensors.cpp  test_label_tag.cpp  test_mdspan_interop.cpp  test_ops.cpp  test_reference_backend.cpp  test_tensor.cpp  test_tex_evaluate.cpp  test_tex_parser.cpp  test_typed_tensor.cpp  test_version.cpp  test_webgpu_backend.cpp  test_webgpu_wgsl.cpp
tools/: check-vendored.sh  release.sh
tutorials/: 00_intro.ipynb  01_formula-is-the-program.ipynb  05_autograd-from-scratch.ipynb  06_webgpu-acceleration.ipynb  07_mlp-on-toy.ipynb  08_swappable-backends.ipynb  09_bundle-adjustment.ipynb  README.md  environment.yml
(+239 files in other folders)
